--- a/syllabus.html
+++ b/syllabus.html
@@ -124,7 +124,7 @@
   </section>
 
   <div class="iframe-body">
-    <iframe src="pdf/holiday.pdf" width="800" height="500" id="pdf-object"> </iframe>
+    <object data="pdf/holiday.pdf" width="800" height="500" id="pdf-object"> </object>
   </div>
 
 
