--- a/syllabus.html
+++ b/syllabus.html
@@ -19,6 +19,10 @@
 
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+  
+  
+  <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
+  
 
   <!-- Bootstrap Scripts -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -124,11 +128,33 @@
   </section>
 
   <div class="iframe-body">
-    <object data="pdf/holiday.pdf" width="800" height="500" id="pdf-object"> </object>
+    <div id="pdf-viewer"></div>
   </div>
 
 
-  
+  <script>
+      // PDF.js script
+      const url = 'fees.pdf'; // replace with the actual filename of your PDF file
+      pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://mozilla.github.io/pdf.js/build/pdf.worker.js';
+      pdfjsLib.getDocument(url).promise.then(function(pdf) {
+        // Load PDF document
+        pdf.getPage(1).then(function(page) {
+          // Load page
+          const scale = 1.5;
+          const viewport = page.getViewport({ scale: scale });
+          const canvas = document.createElement('canvas');
+          const context = canvas.getContext('2d');
+          canvas.height = viewport.height;
+          canvas.width = viewport.width;
+          document.querySelector('#pdf-viewer').appendChild(canvas);
+          const renderContext = {
+            canvasContext: context,
+            viewport: viewport
+          };
+          page.render(renderContext);
+        });
+      });
+    </script>
 
   <!-- Footer -->
 
