--- a/syllabus.html
+++ b/syllabus.html
@@ -128,7 +128,11 @@
   </section>
 
 
+<div class="iframe-body">
 
+  <iframe src="pdf/holiday.pdf" width="800" height="500" id="pdf-object"> </iframe>
+
+</div>
 
 
   <!-- Footer -->
